--- a/src/html/apis/form.html
+++ b/src/html/apis/form.html
@@ -26,14 +26,19 @@
                     <app-field-error error="error.name"></app-field-error>
                 </div>
                 <div class="input-field col s12">
-                    <input id="request_host" ng-model="api.request_host" type="text" class="validate" ng-class="{invalid: error.request_host}">
-                    <label for="request_host" ng-class="{active:api.request_host}">Request host</label>
-                    <app-field-error error="error.request_host"></app-field-error>
+                    <input id="methods" ng-model="api.methods" type="text" class="validate" ng-class="{invalid: error.methods}">
+                    <label for="methods" ng-class="{active:api.methods}">Methods</label>
+                    <app-field-error error="error.methods"></app-field-error>
                 </div>
                 <div class="input-field col s12">
-                    <input id="request_path"  ng-model="api.request_path" type="text" class="validate" ng-class="{invalid: error.request_path}">
-                    <label for="request_path" ng-class="{active:api.request_path}">Request path</label>
-                    <app-field-error error="error.request_path"></app-field-error>
+                    <input id="hosts" ng-model="api.hosts" type="text" class="validate" ng-class="{invalid: error.hosts}">
+                    <label for="hosts" ng-class="{active:api.hosts}">Hosts</label>
+                    <app-field-error error="error.hosts"></app-field-error>
+                </div>
+                <div class="input-field col s12">
+                    <input id="uris"  ng-model="api.uris" type="text" class="validate" ng-class="{invalid: error.uris}">
+                    <label for="uris" ng-class="{active:api.uris}">URIs</label>
+                    <app-field-error error="error.uris"></app-field-error>
                 </div>
                 <div class="input-field col s12">
                     <input id="upstream_url"  ng-model="api.upstream_url" type="text" class="validate" ng-class="{invalid: error.upstream_url}">
@@ -41,14 +46,44 @@
                     <app-field-error error="error.upstream_url"></app-field-error>
                 </div>
                 <p class="col s6">
-                    <input type="checkbox" ng-model="api.strip_request_path" class="filled-in validate" id="strip_request_path" ng-true-value="true" ng-false-value="false" />
-                    <label for="strip_request_path">Strip request path</label>
-                    <app-field-error error="error.strip_request_path"></app-field-error>
+                    <input type="checkbox" ng-model="api.strip_uri" class="filled-in validate" id="strip_uri" ng-true-value="true" ng-false-value="false" />
+                    <label for="strip_uri">Strip URI?</label>
+                    <app-field-error error="error.strip_uri"></app-field-error>
                 </p>
                 <p class="col s6">
                     <input type="checkbox"  ng-model="api.preserve_host" class="filled-in validate" id="preserve_host" ng-true-value="true" ng-false-value="false" />
                     <label for="preserve_host">Preserve host</label>
                     <app-field-error error="error.preserve_host"></app-field-error>
+                </p>
+                <div class="input-field col s12">
+                    <input id="retries" ng-model="api.retries" type="number" class="validate" ng-class="{invalid: error.retries}">
+                    <label for="retries" ng-class="{active:api.retries}">Retries</label>
+                    <app-field-error error="error.retries"></app-field-error>
+                </div>
+                <div class="input-field col s12">
+                    <input id="upstream_connect_timeout" ng-model="api.upstream_connect_timeout" type="number" class="validate" ng-class="{invalid: error.upstream_connect_timeout}">
+                    <label for="upstream_connect_timeout" ng-class="{active:api.upstream_connect_timeout}">Upstream Connect Timeout</label>
+                    <app-field-error error="error.upstream_connect_timeout"></app-field-error>
+                </div>
+                <div class="input-field col s12">
+                    <input id="upstream_send_timeout" ng-model="api.upstream_send_timeout" type="number" class="validate" ng-class="{invalid: error.upstream_send_timeout}">
+                    <label for="upstream_send_timeout" ng-class="{active:api.upstream_send_timeout}">Upstream Send Timeout</label>
+                    <app-field-error error="error.upstream_send_timeout"></app-field-error>
+                </div>
+                <div class="input-field col s12">
+                    <input id="upstream_read_timeout" ng-model="api.upstream_read_timeout" type="number" class="validate" ng-class="{invalid: error.upstream_read_timeout}">
+                    <label for="upstream_read_timeout" ng-class="{active:api.upstream_read_timeout}">Upstream Read Timeout</label>
+                    <app-field-error error="error.upstream_read_timeout"></app-field-error>
+                </div>
+                <p class="col s6">
+                    <input type="checkbox" ng-model="api.https_only" class="filled-in validate" id="https_only" ng-true-value="true" ng-false-value="false" />
+                    <label for="https_only">Https Only?</label>
+                    <app-field-error error="error.https_only"></app-field-error>
+                </p>
+                <p class="col s6">
+                    <input type="checkbox" ng-model="api.http_if_terminated" class="filled-in validate" id="http_if_terminated" ng-true-value="true" ng-false-value="false" />
+                    <label for="http_if_terminated">Http If Terminated?</label>
+                    <app-field-error error="error.http_if_terminated"></app-field-error>
                 </p>
                 <div class="input-field col s12">
                     <button type="submit" class="waves-effect waves-light btn right">
