--- a/src/html/apis/form.html
+++ b/src/html/apis/form.html
@@ -52,7 +52,7 @@
                 </p>
                 <p class="col s6">
                     <input type="checkbox"  ng-model="api.preserve_host" class="filled-in validate" id="preserve_host" ng-true-value="true" ng-false-value="false" />
-                    <label for="preserve_host">Preserve host</label>
+                    <label for="preserve_host">Preserve host?</label>
                     <app-field-error error="error.preserve_host"></app-field-error>
                 </p>
                 <div class="input-field col s12">
